--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+
+    <form class="" action="/" method="POST">
+      <p>Your Text:</p>
+      <input type="text" name="phrase" value="">
+      <input type="submit" id="Submit">
+    </form>
   </body>
 </html>
