--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,12 +5,13 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
+    <h1>Pig Latinizer!</h1>
 
-    <form class="" action="/" method="POST">
-      <p>Your Text:</p>
-      <input type="text" name="phrase" value="">
-      <input type="submit" id="Submit">
+    <form class="" action="/piglatinize" method="POST">
+      <p>Enter your phrase:</p>
+      <textarea name="user_phrase"></textarea>
+      <br>
+      <button type="submit" name="submit" value="submit">Submit</button>
     </form>
   </body>
 </html>
